// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#ccc",
      "borderRadius": 30,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#444",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    Caption
  </Text>
</View>
`;

exports[`Badge renders with custom styles 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "green",
      "borderColor": "green",
      "borderRadius": 30,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "green",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Badge renders with default styles 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#ccc",
      "borderRadius": 30,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#444",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Badge with on click action Android renders touchables 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#ccc",
      "borderRadius": 30,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffbcbc",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 100,
          "justifyContent": "center",
          "margin": 10,
          "width": 300,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "margin": 20,
        }
      }
    >
      TouchableNativeFeedback is not supported on this platform!
    </Text>
  </View>
</View>
`;

exports[`Badge with on click action iOS renders touchables 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#ccc",
      "borderRadius": 30,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#444",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      
    </Text>
  </View>
</View>
`;
